--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,35 +1,41 @@
 name: Create Release
 
 on:
-  workflow_run:
-    workflows: [ "Build" ]
-    types: [ completed ]
     push:
-      # Sequence of patterns matched against refs/tags
+      branches: [ master ]
       tags:
         - 'v*' # Push events to matching v*, i.e. v1.0, v20.15.10
 
 jobs:
   build:
     name: Create Release
-    runs-on: ubuntu-latest
+    runs-on: macos-latest
     steps:
-      - uses: actions/download-artifact@v2
+      - uses: actions/checkout@v2
+      - uses: actions/setup-java@v2
         with:
-          name: fxradio
+          distribution: 'zulu'
+          java-version: '8'
+          java-package: jdk+fx
+      - run: ./gradlew -i jfxNative
+        env:
+          FX_APPEND_PATH: /zulu-8.jdk/Contents/Home/jre
+      - name: Prepare JAR
+        run: |
+         zip -r releaseJar.zip build/jfx/app/
       - name: Create Release
         id: create_release
         uses: actions/create-release@v1
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # This token is provided by Actions, you do not need to create your own token
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} 
         with:
           tag_name: ${{ github.ref }}
           release_name: Release ${{ github.ref }}
           body: |
-            Latest release
+            Latest release.
           draft: false
           prerelease: false
-      - name: Upload Release Asset
+      - name: Upload Release JAR
         id: upload-release-asset 
         uses: actions/upload-release-asset@v1
         env:
@@ -37,5 +43,16 @@ jobs:
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }} 
           asset_path: ./releaseJar.zip
-          asset_name: releaseJar.zip
+          asset_name: fxradio_jar.zip
           asset_content_type: application/zip
+      - name: Upload Release DMG
+        id: upload-release-dmg
+        uses: actions/upload-release-asset@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          upload_url: ${{ steps.create_release.outputs.upload_url }} 
+          asset_path: ./build/jfx/native/FXRadio-*.dmg
+          asset_name: fxradio_macOS.dmg
+          asset_content_type: application/octet-stream
+
