--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,8 +1,6 @@
 name: Build
 
-# Controls when the action will run. 
 on:
-  # Triggers the workflow on push or pull request events but only for the master branch
   push:
     branches: [ master, develop ]
   pull_request:
@@ -10,14 +8,10 @@ on:
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
-
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   build:
-    name: "Build and create artifact"
-    # The type of runner that the job will run on
+    name: "Build and create JAR artifact"
     runs-on: macos-latest
-    # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-java@v2
@@ -25,37 +19,16 @@ jobs:
           distribution: 'zulu'
           java-version: '8'
           java-package: jdk+fx
-      - run: ./gradlew -i jfxNative
+      - run: ./gradlew -i jfxJar
         env:
           FX_APPEND_PATH: /zulu-8.jdk/Contents/Home/jre
-      - name: Prepare JAR files
+      - name: Prepare JAR
         run: |
          zip -r releaseJar.zip build/jfx/app/
-         ls -all */*
-         ls -all build/*/*
-      - name: Prepare APP file
-        if: runner.os == 'macOS'
-        run: |
-         zip -r release_macOS_app.zip build/jfx/native/FXRadio.app
-      - name: Prepare DMG file
-        if: runner.os == 'macOS'
-        run: |
-         zip -r release_macOS.zip build/jfx/native/FXRadio-*.dmg
       - uses: actions/upload-artifact@v2
         with:
-          name: fxradio.jar
+          name: fxradio-jar.zip
           path: releaseJar.zip
           if-no-files-found: error
-      - uses: actions/upload-artifact@v2 
-        if: runner.os == 'macOS'
-        with:
-          name: fxradio_macOS_dmg
-          path: release_macOS.zip
-          if-no-files-found: error
-      - uses: actions/upload-artifact@v2 
-        if: runner.os == 'macOS'
-        with:
-          name: fxradio_macOS_app
-          path: release_macOS_app.zip
-          if-no-files-found: error
+          retention-days: 60
   
