--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -55,7 +55,7 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }} 
-          asset_path: ${{ env.DMG_PATH }
+          asset_path: ${{ env.DMG_PATH }}
           asset_name: fxradio_macOS.dmg
           asset_content_type: application/octet-stream
 
