--- a/build.gradle
+++ b/build.gradle
@@ -17,24 +17,12 @@ apply plugin: 'javafx-gradle-plugin'
 
 version "0.8.0"
 
-compileKotlin {
-    kotlinOptions.jvmTarget = 1.8
-}
-
-compileTestKotlin {
-    kotlinOptions.jvmTarget = 1.8
-}
-
 ext.versions = [
         kotlin             : "1.4.32",
         kotlinCoroutines   : "1.3.4",
         tornadofx          : "1.7.20",
         controlsfx         : "8.40.18",
         tornadofxControlsfx: "0.1.1",
-        retrofit           : "2.9.0",
-        retrofitAdapters   : "2.9.0",
-        retrofitLogger     : "3.14.9",
-
         kotlinLogging      : "1.12.5",
         slf4j              : "1.7.36",
         log4j2             : "2.17.2",
@@ -51,32 +39,49 @@ ext.versions = [
         flyway             : "8.5.4"
 ]
 
+allprojects {
+    apply plugin: 'org.jetbrains.kotlin.jvm'
+
+    repositories {
+        mavenCentral()
+        maven { url 'https://jitpack.io' }
+    }
+
+    dependencies {
+        // Align versions of all Kotlin components
+        compile platform('org.jetbrains.kotlin:kotlin-bom')
+
+        // Use the Kotlin JDK 8 standard library
+        compile("org.jetbrains.kotlin:kotlin-stdlib-jdk8")
+        compile("org.jetbrains.kotlin:kotlin-reflect:$versions.kotlin")
+        compile("org.jetbrains.kotlinx:kotlinx-coroutines-core:$versions.kotlinCoroutines")
+
+        compile("io.github.microutils:kotlin-logging:$versions.kotlinLogging")
+        compile("org.slf4j:slf4j-api:$versions.slf4j")
+        compile("org.apache.logging.log4j:log4j-slf4j-impl:$versions.log4j2")
+        compile("org.apache.logging.log4j:log4j-api:$versions.log4j2")
+        compile("org.apache.logging.log4j:log4j-core:$versions.log4j2")
+    }
+}
+
+
+compileKotlin {
+    kotlinOptions.jvmTarget = 1.8
+}
+
+compileTestKotlin {
+    kotlinOptions.jvmTarget = 1.8
+}
+
 dependencies {
-    // Align versions of all Kotlin components
-    compile platform('org.jetbrains.kotlin:kotlin-bom')
+    compile project(':api-client')
 
     // Local JAR files
     compile fileTree(include: ['*.jar'], dir: 'libs')
 
-    // Use the Kotlin JDK 8 standard library
-    compile("org.jetbrains.kotlin:kotlin-stdlib-jdk8")
-    compile("org.jetbrains.kotlin:kotlin-reflect:$versions.kotlin")
-    compile("org.jetbrains.kotlinx:kotlinx-coroutines-core:$versions.kotlinCoroutines")
-
     compile("no.tornado:tornadofx:$versions.tornadofx")
     compile("org.controlsfx:controlsfx:$versions.controlsfx")
     compile("no.tornado:tornadofx-controlsfx:$versions.tornadofxControlsfx")
-
-    compile("com.squareup.retrofit2:retrofit:$versions.retrofit")
-    compile("com.squareup.retrofit2:adapter-rxjava2:$versions.retrofitAdapters")
-    compile("com.squareup.retrofit2:converter-gson:$versions.retrofitAdapters")
-    compile("com.squareup.okhttp3:logging-interceptor:$versions.retrofitLogger")
-
-    compile("io.github.microutils:kotlin-logging:$versions.kotlinLogging")
-    compile("org.slf4j:slf4j-api:$versions.slf4j")
-    compile("org.apache.logging.log4j:log4j-slf4j-impl:$versions.log4j2")
-    compile("org.apache.logging.log4j:log4j-api:$versions.log4j2")
-    compile("org.apache.logging.log4j:log4j-core:$versions.log4j2")
 
     compile("commons-io:commons-io:$versions.commonsio")
 
@@ -101,17 +106,6 @@ dependencies {
 sourceSets {
     main.java.srcDirs += 'src/main/kotlin/'
 }
-
-repositories {
-    mavenCentral()
-    maven { url 'https://jitpack.io' }
-}
-
-/*
-jfxJar {
-    dependsOn test
-}
-*/
 
 jfx {
     HashMap<String, String> attributes = new HashMap<String, String>()
@@ -145,8 +139,4 @@ jfx {
             //'signBundle': true,
             //'mac.signing-key-developer-id-app': 'Developer ID Application: XYZ'
     ]
-}
-
-test {
-    useJUnitPlatform()
 }
