--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -44,5 +44,5 @@ jobs:
         - run: ./gradlew -i jfxNative
         - name: test
           run: |
-              dir C:\hostedtoolcache\windows\Java_Zulu_jdk+fx\8.0.345-1\x64\ /s /b
+              dir /S C:\hostedtoolcache\windows\Java_Zulu_jdk+fx\8.0.345-1\x64\
   
