--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,7 +6,7 @@ on:
   pull_request:
     branches: [ master, develop ]
 
-  # Allows you to run this workflow manually from the Actions tab
+  # Allows to run this workflow manually from the Actions tab
   workflow_dispatch:
 jobs:
   build:
@@ -31,21 +31,4 @@ jobs:
           path: releaseJar.zip
           if-no-files-found: error
           retention-days: 60
-  buildwin:
-    name: "Create Windows release"
-    runs-on: windows-latest
-    steps:
-        - uses: actions/checkout@v2
-        - uses: actions/setup-java@v2
-          with:
-              distribution: 'zulu'
-              java-version: '8'
-              java-package: jdk+fx
-        - run: ./gradlew -i jfxNative
-          env:
-           FX_APPEND_PATH: /jre
-          continue-on-error: true
-        - name: test
-          run: |
-              dir -s build/jfx/
   
