--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,11 +20,9 @@ jobs:
           java-version: '8'
           java-package: jdk+fx
       - run: ./gradlew -i jfxJar
-        env:
-          FX_APPEND_PATH: /zulu-8.jdk/Contents/Home/jre
       - name: Prepare JAR
         run: |
-         zip -r releaseJar.zip build/jfx/app/
+         zip -r releaseJar.zip build/jfx/native/*.jar
       - uses: actions/upload-artifact@v2
         with:
           name: fxradio-jar.zip
