--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -65,23 +65,10 @@ jobs:
                   distribution: 'zulu'
                   java-version: '8'
                   java-package: jdk+fx
-            - run: ./gradlew -d jfxNative
+            - run: ./gradlew -i jfxNative
             - name: Find MSI file on filesystem
               id: find-msi
-              run: echo "MSI_PATH=$(Get-ChildItem -path D:\ -recurse -include "FXRadio-*.msi" | Select -ExpandProperty FullName)" >> $env:GITHUB_ENV
-            - name: Find EXE file on filesystem
-              id: find-exe
-              run: echo "EXE_PATH=$(Get-ChildItem -path D:\ -recurse -include "FXRadio-*.exe" | Select -ExpandProperty FullName)" >> $env:GITHUB_ENV
-            - name: Upload Release EXE
-              id: upload-release-exe
-              uses: actions/upload-release-asset@v1
-              env:
-                  GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-              with:
-                  upload_url: ${{needs.prepareRelease.outputs.uploadUrl}}
-                  asset_path: ${{ env.EXE_PATH }}
-                  asset_name: fxradio_windows.exe
-                  asset_content_type: application/octet-stream
+              run: echo "MSI_PATH=$(Get-ChildItem -path D:\ -recurse -include "FXRadio_*.msi" | Select -ExpandProperty FullName)" >> $env:GITHUB_ENV
             - name: Upload Release MSI
               id: upload-release-msi
               uses: actions/upload-release-asset@v1
@@ -90,5 +77,5 @@ jobs:
               with:
                   upload_url: ${{needs.prepareRelease.outputs.uploadUrl}}
                   asset_path: ${{ env.MSI_PATH }}
-                  asset_name: fxradio_windows_msi.msi
+                  asset_name: fxradio_windows.msi
                   asset_content_type: application/octet-stream
