--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,8 +17,8 @@ jobs:
       - uses: actions/setup-java@v3
         with:
           distribution: 'zulu'
-          java-version: '8'
-          java-package: jdk+fx
+          java-version: '11'
+          java-package: jdk
       - run: ./gradlew -i jfxNative
       - name: Find zipball on filesystem
         id: find-zipball
