--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,8 +16,8 @@ jobs:
       - uses: actions/checkout@v3
       - uses: actions/setup-java@v3
         with:
-          distribution: 'zulu'
-          java-version: '19'
+          distribution: 'temurin'
+          java-version: '20'
           java-package: jdk
       - run: ./gradlew -i jfxNative
       - name: Find zipball on filesystem
