--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -15,7 +15,7 @@ jobs:
         steps:
             - name: Create Release
               id: create_release
-              uses: actions/create-release@v1
+              uses: comnoco/create-release-action@v2.0.5
               env:
                   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
               with:
@@ -34,8 +34,8 @@ jobs:
             - uses: actions/checkout@v3
             - uses: actions/setup-java@v3
               with:
-                  distribution: 'zulu'
-                  java-version: '19'
+                  distribution: 'temurin'
+                  java-version: '20'
                   java-package: jdk
             - run: ./gradlew -i jfxNative
             - name: Find DMG file on filesystem
@@ -62,8 +62,8 @@ jobs:
               shell: bash
             - uses: actions/setup-java@v3
               with:
-                  distribution: 'zulu'
-                  java-version: '19'
+                  distribution: 'temurin'
+                  java-version: '20'
                   java-package: jdk
             - run: ./gradlew -i jfxNative
             - name: Find MSI file on filesystem
